--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 		<% if(user) { %>
 			<a href="/signout"><input type="button" id="sign-out" value="Sign out"></a>
 			<a href="/delete"><input type="button" id="delete" value="Delete account"></a>
-			<h3>Welcome, <%= user %></h3>
+			<h3>Welcome, <%= user %>.</h3>
 		<% } else { %>
 			<a href="/signup"><input type="button" id="sign-up" value="Sign up"></a>
 			<a href="/signin"><input type="button" id="sign-in" value="Sign in"></a>
