--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -2,8 +2,8 @@
 <head>
 	<title>Accounts Signin</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="signin.css">
 	<script src="jquery.js"></script>
-	<style>input[type="text"] {border: 1px solid gray;}</style>
 </head>
 <body>
 	<h1 class="centered">Signin</h1>
