--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,11 +4,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Signup</h1>
+	<h1 class="centered">Signup</h1>
 	<form action="/accounts" method="post">
-		Username: <input type="text" name="username">
-		Password: <input type="text" name="password">
-		<input type="submit" value="Create account">
+		<div class="centered">
+			Username: <input type="text" name="username">
+			Password: <input type="text" name="password">
+		</div>
+		<input type="submit" value="Create account" class="centered">
 	</form>
 </body>
 </html>
