--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,20 @@
+h1, h2, h3 {
+	font-family: Verdana, Geneva, sans-serif;
+}
 .centered {
     text-align: center;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+}
+body {
+	background-color: #c5c5c5;
+}
+input[type="button"] {
+	border-radius: 10px;
+	margin-top: 5px;
+	padding: 0, 7px;
+}
+input[type="text"] {
+	margin-bottom: 5px;
 }
