--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -6,7 +6,7 @@
 	    <script src="jquery.js"></script>
     </head>
     <body>
-        <h1><b>Are you sure you want to delete your account? This action cannot be undone.</b></h1>
+        <h1 id="centered"><b>Are you sure you want to delete your account? This action cannot be undone.</b></h1>
         <input type="button" value="Delete account" id="delete">
         <script>
             $("#delete").on('click', function() {
